--- a/slides/2020/01-jan/index.pug
+++ b/slides/2020/01-jan/index.pug
@@ -428,6 +428,16 @@ html
         li Really handy stuff, be sure to take a look
       img(src="./images/tiny-helpers.png", alt="Tiny Helpers", style="width: 40%")
 
+    section.slide
+      h2 Beware Y2038
+      ul 
+        li  
+          a(href="https://twitter.com/jxxf/status/1219009308438024200") Interesting story
+          |  about a recent Y2038 bug that cost $1.7M to fix
+        li UNIX timestamps used to be a signed 32-bit ints
+        li Max value is 2147483647
+        li Jan 1, 1970 00:00:00 UTC + 2147483647 secs = Jan 19, 2038 03:14:07 UTC
+      img(src="./images/y2k.jpg", alt="y2k", style="width: 40%")
 
 
     //----------------------  Events  ----------------------
@@ -458,6 +468,22 @@ html
         li It's oddly satisfying
       img(src="./images/css-diner.png", alt="CSS Diner", style="width: 50%")
 
+    section.slide
+      h2 RIP Terry Jones
+      ul
+        li The founding member of 
+          a(href="https://en.wikipedia.org/wiki/Monty_Python") Monty Python
+          |  sadly 
+          a(href="https://www.cnn.com/2020/01/22/entertainment/terry-jones-dies-scli-gbr-intl/index.html") died today
+        li Did you know...
+        ul
+          li The term for email "spam" is 
+            a(href="https://en.wikipedia.org/wiki/Spamming#Etymology") derived from
+            |  a 1970 Python sketch
+          li It referred to the ubiquity of real Spam in post-WWII Britain
+      a(href="https://www.dailymotion.com/video/x9fly1")
+        img(src="./images/spam_waitress.jpg", alt="Spam", width="30%")
+      
 
     //----------------------  On the Lighter Side  ----------------------
     
