--- a/slides/2020/01-jan/index.pug
+++ b/slides/2020/01-jan/index.pug
@@ -164,7 +164,7 @@ html
         a(href='https://www.youtube.com/watch?v=Q81403HNZRc') video
         | )
       ul
-        li 
+        li
           a(href='https://web.dev/css-props-and-vals/') CSS Properties and Values API
         li
           a(href='https://developers.google.com/web/updates/2019/09/fresher-sw') Fresher service workers
@@ -173,7 +173,7 @@ html
       p Allow users on your domain to 
         a(href="https://googlechrome.github.io/OriginTrials/developer-guide.html") test new browser features
       ul
-        li 
+        li
           a(href="https://developers.chrome.com/origintrials/#/view_trial/3868592079911256065") Native file system
           | : Read/write files to the local system
         li
@@ -241,12 +241,13 @@ html
           strong First official Stable channel build!
         li Built on 
           a(href="https://www.chromium.org/") Chromium
-        li Automaic updates (well, 
+        li Automatic updates (well, 
           a(href="https://docs.microsoft.com/en-us/deployedge/microsoft-edge-blocker-toolkit") sort of
           | )
-        li It's mostly Chrome (for now)
         li Check out the 
           a(href="https://docs.microsoft.com/en-us/microsoft-edge/") developer docs
+        li It's mostly Chrome, but with privacy built-in:
+      img(src="./images/edge-blocking.png" alt="Edge blocking" style="width:50%")
 
     section.slide
       h2 Safari 13 
