--- a/slides/2020/02-feb/index.pug
+++ b/slides/2020/02-feb/index.pug
@@ -252,15 +252,17 @@ html
       .shim(style='background-color:#AD7909;opacity:.8;')
 
     section.slide
-      h2 Lighthouse CI
-      blockquote Automate running Lighthouse for every commit, viewing the changes, and preventing regressions
+      h2 Angular 9
+      img(src='../../shared/resources/images/angular-logo.png', class='corner-image', width='200px', alt='Angular')
+      p Released February 6th — 
+        a(href='https://blog.angular.io/version-9-of-angular-now-available-project-ivy-has-arrived-23c97b63cfa3') Release Notes
       ul
-        li
-          a(href="https://github.com/GoogleChrome/lighthouse-ci") Lighthouse
-          |  reports baked into every PR
-        li Enforce performance budgets
-        li Compare site versions
-      img(src="./images/lighthouse-ci.png" alt="Lighthouse CI" style="width:50%")
+        li New 
+          a(href="https://angular.io/guide/ivy") Ivy Compiler
+          |  and runtime (huge bundle reductions)
+        li New YouTube and Google Maps components
+        li Component harnesses for testing components
+        li TypeScript 3.7 support
 
 
       
