--- a/slides/2020/02-feb/index.pug
+++ b/slides/2020/02-feb/index.pug
@@ -260,14 +260,14 @@ html
         li Another code-focused mono typeface (also see 
           a(href="https://github.com/tonsky/FiraCode") FiraCode
           | )
-        li Increased height, 138 ligatures
+        li Increased height, 138 code-specific ligatures
       img(src="./images/jetbrains-mono.svg", alt="JetBrains Mono")
 
     section.slide
       h2 Angular 9
       img(src='../../shared/resources/images/angular-logo.png', class='corner-image', width='200px', alt='Angular')
-      p Released February 6th — 
-        a(href='https://blog.angular.io/version-9-of-angular-now-available-project-ivy-has-arrived-23c97b63cfa3') Release Notes
+      p Released February 6th &mdash; 
+        a(href='https://blog.angular.io/version-9-of-angular-now-available-project-ivy-has-arrived-23c97b63cfa3') release notes
       ul
         li New 
           a(href="https://angular.io/guide/ivy") Ivy Compiler
@@ -275,6 +275,17 @@ html
         li New YouTube and Google Maps components
         li Component harnesses for testing components
         li TypeScript 3.7 support
+    
+    section.slide
+      h2 Ionic 5
+      img(src='../../shared/resources/images/ionic-logo.png', class='corner-image', width='200px', alt='Ionic')
+      p Released February 11th &mdash; 
+        a(href="https://ionicframework.com/blog/announcing-ionic-5/") release notes
+      ul
+        li iOS 13 design updates
+        li Angular Ivy support (plus React and Vue)
+        li New starter pprojects, colors, icons and more
+      img(src="./images/ionic-components.png", alt="Ionic components", style="max-width:30%")
 
     section.slide
       h2 
@@ -288,6 +299,30 @@ html
         li Eliminate all boilerplate and grunt work
         li Still vaporware! But coming soon...
 
+    section.slide
+      h2 GitHub CLI
+      blockquote Supercharge your command line GitHub experience
+      ul
+        li Beta 
+          a(href="https://github.blog/2020-02-12-supercharge-your-command-line-experience-github-cli-is-now-in-beta/") announced 
+          | February 12th
+        li Manage issues and PRs directly from the CLI
+        li Of course it's 
+          a(href="https://github.com/cli/cli") open source
+      img(src="./images/github-cli.webp", alt="GitHub CLI", style="max-width:60%")
+    
+    section.slide
+      h2 文言 wenyan-lang
+      blockquote A programming language for the ancient Chinese
+      ul
+        li World's first 
+          a(href="https://github.com/wenyan-lang/wenyan") classical Chinese programming language
+        li Created last year by a 
+          a(href="https://spectrum.ieee.org/tech-talk/computing/software/classical-chinese") recent CS grad
+        li Transpiles to JS, with Python, Ruby and more in the works
+      img(src="./images/wenyan-lang.jpg", alt="wenyan-lang", style="max-width:35%")
+
+
       
     //----------------------  Tips & Tricks  ----------------------
     
@@ -297,33 +332,26 @@ html
       .shim(style='background-color:#6d0264;opacity:.7;')
   
     section.slide
-      h2 2020 Front-End Perf Checklist
-      blockquote Everything you need to know to create fast experiences on the web today. 
-      ul 
-        li An great overview of 
-          a(href="https://www.smashingmagazine.com/2020/01/front-end-performance-checklist-2020-pdf-pages/") modern performance strategies
-        li Updated every year since 2016
-        li It's long, but web devs 
-          strong really 
-          | should read it
-      img(src="./images/speed-calc.webp", alt="Speed Calculator", style="max-width: 40%")
+      h2 Git Command Explorer
+      blockquote Find the right commands you need without digging through the web.
+      ul
+        li Inspired by this 
+          a(href="https://arrayexplorer.netlify.com/") Array Explorer
+        li It's 
+          a(href="https://github.com/summitech/gitexplorer") open source
+          |  &mdash; 
+          a(href="https://gitexplorer.com/") try it out
+      img(src="./images/git-explorer.png", alt="Git command explorer", style="max-width:60%")
 
 
     //----------------------  Security  ----------------------
     
-    section.slide.cover(style='background-image:url(../../shared/resources/images/security.jpg)')
-      .content
-        h1 Security
-      .shim(style='background-color:#c11;opacity:.7;')
+    //- section.slide.cover(style='background-image:url(../../shared/resources/images/security.jpg)')
+    //-   .content
+    //-     h1 Security
+    //-   .shim(style='background-color:#c11;opacity:.7;')
   
-    section.slide
-      h2 Chrome Password Checker
-      p 
-        a(href="https://passwords.google.com/") https://passwords.google.com
-      ul
-        li If you manage passwords in Chrome you now can audit them
-        li It will also suggest strong passwords a la Safari
-      img(src="./images/passwords.google.com.png" alt="Google Password Checker" style="width:50%")
+
 
     
     //----------------------  Industry Headlines  ----------------------
@@ -334,7 +362,7 @@ html
       .shim(style='background-color:#393;opacity:.7;')
 
     section.slide
-      h2 .org Registry Sale Halted
+      h2 .org Registry Sale Paused
       p The $1.1B sale to Ethos Capital was 
         a(href="https://www.cnn.com/2019/11/27/tech/org-domain-sale/index.html") announced
         |  last November
@@ -342,7 +370,8 @@ html
         li People are 
           a(href="https://savedotorg.org/") not happy
         li Internet Society advisory council is now 
-          a(href="https://www.theregister.co.uk/2020/02/19/dot_org_sale_isoc_advice/") halting the sale
+          a(href="https://www.theregister.co.uk/2020/02/19/dot_org_sale_isoc_advice/") reconsidering
+        li ICANN is reviewing the deal and could halt it
 
     section.slide
       h2 DNSSEC Key Signing Postponed
@@ -378,36 +407,6 @@ html
       .shim(style='background-color:#555;opacity:.7;')
 
     section.slide
-      h2 
-        a(href="https://gitexplorer.com/") Git Command Explorer
-      blockquote Find the right commands you need without digging through the web.
-      ul
-        li Just tell it what you want to do!
-        li It will give you the exact CLI commands
-      img(src="./images/git-explorer.png", alt="Git command explorer")
-
-
-    //----------------------  Events  ----------------------
-
-    //- section.slide.cover(style='background-image:url(../../shared/resources/images/events.jpg)')
-    //-   .content
-    //-     h1 Upcoming Events
-    //-   .shim(style='background-color:#369;opacity:.6;')
-
-    //- section.slide
-    //-   h2 X
-    //-   blockquote X
-    //-   ul 
-    //-     li X
-    //-   img(src="./images/X.png", alt="X", style="max-width: 50%")
-
-
-    //----------------------  Something Completely Different  ----------------------
-    
-    section.slide.cover(style='background-image:url(../../shared/resources/images/anfscd.jpg)')
-      h1 And now for something completely different...
-
-    section.slide
       h2 An Interesting Bug
       ul
         li In 2018, Docker and Razer Synapse 
@@ -440,6 +439,44 @@ html
         li Beware the uncritical copy/paste!
 
 
+    //----------------------  Events  ----------------------
+
+    section.slide.cover(style='background-image:url(../../shared/resources/images/events.jpg)')
+      .content
+        h1 Upcoming Events
+      .shim(style='background-color:#369;opacity:.6;')
+
+    section.slide
+      h2 VueConf 2020
+      ul 
+        li 
+          a(href="http://vueconf.us") http://vueconf.us
+        li In Austin, March 2-4 (next week!)
+        li Very limited late tickets 
+          a(href="https://reg.connectevents.io/ConnectEvents/vueconfus2020/") still available
+      img(src="./images/vueconf.png", alt="VueConf", style="max-width: 40%")
+
+
+    //----------------------  Something Completely Different  ----------------------
+    
+    section.slide.cover(style='background-image:url(../../shared/resources/images/anfscd.jpg)')
+      h1 And now for something completely different...
+
+    section.slide
+      h2 A 100% Solar-powered Website
+      ul
+        li Low-tech magazine  
+          a(href="https://solar.lowtechmagazine.com/2018/09/how-to-build-a-lowtech-website.html") rebuilt their blog 
+          | on solar power
+        li Goal was to be 100% sustainable and off-grid
+        li They recently wrote up an 
+          a(href="https://solar.lowtechmagazine.com/2020/01/how-sustainable-is-a-solar-powered-website.html") analysis 
+          | after 15 months of use
+        li Related: An analysis of 
+          a(href="https://dannyvankooten.com/website-carbon-emissions/") CO2 emissions on the web
+      img(src="./images/solar-website.png", alt="Solar website", style="max-width:50%")
+
+
     //----------------------  On the Lighter Side  ----------------------
     
     section.slide.cover(style='background-image:url(../../shared/resources/images/lighter-side.jpg)')
@@ -453,7 +490,8 @@ html
         li Responsive design via SVG
         li Check out the 
           a(href='https://essenmitsosse.de/pixel/?showcase=true&slide=3') demo
-      img(src="./images/pixel-art.png", alt="Pixel art", style="max-width: 70%")
+      a(href='https://essenmitsosse.de/pixel/?showcase=true&slide=3')
+        img(src="./images/pixel-art.png", alt="Pixel art", style="max-width: 70%")
 
 
     //----------------------  Fin  ----------------------
