--- a/slides/2020/02-feb/index.pug
+++ b/slides/2020/02-feb/index.pug
@@ -493,6 +493,19 @@ html
       a(href='https://essenmitsosse.de/pixel/?showcase=true&slide=3')
         img(src="./images/pixel-art.png", alt="Pixel art", style="max-width: 70%")
 
+    section.slide
+      h2 Gif Peanut Butter
+      ul 
+        li J.M. Smucker has officially 
+          a(href="https://www.cnn.com/2020/02/25/business/jif-gif-peanut-butter-trnd/index.html") settled it
+        li Technically the .GIF creator 
+          a(href="https://www.cnn.com/2015/03/01/tech/web/how-to-pronounce-gif/index.html") settled it in 2013
+        li It's on limited sale for $10!
+      img(src="./images/gif-pb.jpg", alt="Gif peanut butter", style="max-width: 70%")
+
+    section.slide
+      h2 Gif Peanut Butter
+      img(src="./images/gif-unavailable.png", alt="Gif peanut butter", style="max-width: 70%")
 
     //----------------------  Fin  ----------------------
     
