--- a/slides/2020/02-feb/index.pug
+++ b/slides/2020/02-feb/index.pug
@@ -284,7 +284,7 @@ html
       ul
         li iOS 13 design updates
         li Angular Ivy support (plus React and Vue)
-        li New starter pprojects, colors, icons and more
+        li New starter projects, colors, icons and more
       img(src="./images/ionic-components.png", alt="Ionic components", style="max-width:30%")
 
     section.slide
@@ -388,7 +388,7 @@ html
 
     section.slide
       h2 Npm Outage Feb 17th
-      p Caused by a Cloudflare
+      p Caused by a Cloudflare 
         a(href="https://github.com/npm/cli/issues/836#issuecomment-587019096") DDoS protection bug
       ul
         li Cloudflare tweaked HTTP header rules to identify bad traffic
@@ -495,13 +495,16 @@ html
 
     section.slide
       h2 Gif Peanut Butter
+      blockquote Perfect for sandwiches, baking, and shutting down internet debates
       ul 
         li J.M. Smucker has officially 
           a(href="https://www.cnn.com/2020/02/25/business/jif-gif-peanut-butter-trnd/index.html") settled it
         li Technically the .GIF creator 
           a(href="https://www.cnn.com/2015/03/01/tech/web/how-to-pronounce-gif/index.html") settled it in 2013
-        li It's on limited sale for $10!
-      img(src="./images/gif-pb.jpg", alt="Gif peanut butter", style="max-width: 70%")
+        li It's 
+          a(href="https://www.amazon.com/dp/B084R7DQK4") on sale for $10
+          |  (limited time only)!
+      img(src="./images/gif-pb.jpg", alt="Gif peanut butter", style="max-width: 60%")
 
     section.slide
       h2 Gif Peanut Butter
